@@ -353,7 +353,7 @@ CALL gen.bat</Command>
     <ClInclude Include="Objects\TR3\Vehicles\quad_bike_info.h" />
     <ClInclude Include="Objects\TR3\Vehicles\rubber_boat_info.h" />
     <ClInclude Include="Objects\TR3\Vehicles\upv_info.h" />
-    <ClInclude Include="Objects\TR4\Entity\tr4_wraith_info.h" />
+    <ClInclude Include="Objects\TR4\Entity\WraithInfo.h" />
     <ClInclude Include="Objects\TR4\Vehicles\jeep_info.h" />
     <ClInclude Include="Objects\TR4\Vehicles\motorbike_info.h" />
     <ClInclude Include="Objects\TR5\Entity\tr5_laserhead_info.h" />
@@ -522,7 +522,7 @@ CALL gen.bat</Command>
     <ClInclude Include="Objects\TR4\Entity\tr4_sphinx.h" />
     <ClInclude Include="Objects\TR4\Entity\tr4_troops.h" />
     <ClInclude Include="Objects\TR4\Entity\tr4_wild_boar.h" />
-    <ClInclude Include="Objects\TR4\Entity\tr4_wraith.h" />
+    <ClInclude Include="Objects\TR4\Entity\Wraith.h" />
     <ClInclude Include="Objects\TR4\tr4_objects.h" />
     <ClInclude Include="Objects\TR5\tr5_objects.h" />
     <ClInclude Include="Objects\TR2\Vehicles\speedboat.h" />
@@ -957,7 +957,7 @@ CALL gen.bat</Command>
     <ClCompile Include="Objects\TR4\Entity\tr4_jean_yves.cpp" />
     <ClCompile Include="Objects\TR4\Entity\tr4_knight_templar.cpp" />
     <ClCompile Include="Objects\TR4\Entity\tr4_troops.cpp" />
-    <ClCompile Include="Objects\TR4\Entity\tr4_wraith.cpp" />
+    <ClCompile Include="Objects\TR4\Entity\Wraith.cpp" />
     <ClCompile Include="Renderer\Renderer11.cpp" />
     <ClCompile Include="Game\control\box.cpp" />
     <ClCompile Include="Game\camera.cpp" />
